--- a/style.css
+++ b/style.css
@@ -171,3 +171,55 @@ nav .navigation ul li a:hover{
     color: rgb(70, 70, 87);
     
 }
+
+/* course */
+
+#course{
+    padding: 8vw 8vw 0 8vw;
+    text-align: center;
+}
+
+#course .course{
+    text-align: start;
+    background: F9F9FF;
+    height: 100%;
+    position: relative;
+}
+
+
+#course .course-box{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
+    grid-gap: 1rem;
+    margin-top: 50px;
+}
+
+
+#course .course img{
+    width: 100%;
+    height: 60%;
+    background-size: cover;
+    background-position: center;
+}
+
+#course .course .details{
+    padding: 15px 15px 0 15px;
+}
+
+#course .course .details i{
+    color: #FDC93B;
+    font-size: .9rem;
+}
+
+#course .course .cost{
+    background-color: rgb(74, 74, 136);
+    color: #fff;
+    line-height: 70px;
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    border-radius: 50%;
+    position: absolute;
+    right: 15px;
+    bottom: 100px;
+}
